--- a/templates/block/block--hero-unit.html.twig
+++ b/templates/block/block--hero-unit.html.twig
@@ -9,8 +9,6 @@
   'block-' ~ plugin_id|clean_class,
   bundle ? 'block--type-' ~ bundle|clean_class,
   view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-  content['#block_content'].field_text_align.value,
-  content['#block_content'].field_text_color.value,
   'block-hero-unit',
   'ucb-hero-outer-wrapper'
 ] %}
@@ -30,6 +28,11 @@
 {# set classes for the size of the component if using background media #}
 {% set containerSize = 'ucb-hero-unit-text' %}
 
+{# set class for hero unit text align #}
+{% set heroTextAlign = content['#block_content'].field_text_align.value %}
+
+{# set class for hero unit text color #}
+{% set heroTextColor = content['#block_content'].field_text_color.value %}
 
 {# set classes for the size of the component #}
 {% if content['#block_content'].field_size.value is same as('0') %}
@@ -54,7 +57,7 @@
 {% block content %}
   {{ attach_library('boulder_base/ucb-hero-unit') }}
   <div{{ create_attribute({
-      class: [size, overlayClass, containerSize],
+      class: [size, overlayClass, containerSize, heroTextAlign, heroTextColor ],
       style: bgValue
     }) }}>
     {% set linkColor = content['#block_content'].field_link_color.value %}
