menu style and stylistic fixes

--- a/css/menu-styles/default-menu-styles.css
+++ b/css/menu-styles/default-menu-styles.css
@@ -2,3 +2,8 @@
 .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg {
     padding: 0 5px;
 }
+
+/* Mega Menu Styles */
+.ucb-mega-menu {
+    background-color: #fff;
+}
