--- a/css/menu-styles/rise-styles.css
+++ b/css/menu-styles/rise-styles.css
@@ -374,3 +374,26 @@
     height: 100%;
   }
 }
+
+/* Mega Menu Styles */
+.ucb-header-white .ucb-mega-menu,
+.ucb-header-light .ucb-mega-menu{
+  background-color: #333;
+  color: #fff;
+}
+
+.ucb-header-black .ucb-mega-menu,
+.ucb-header-dark .ucb-mega-menu{
+  background-color: #eee;
+  color: #000;
+}
+
+.ucb-header-white .ucb-mega-menu a,
+.ucb-header-light .ucb-mega-menu a {
+  color: #cfb87b;
+}
+
+.ucb-header-white .ucb-mega-menu a:hover,
+.ucb-header-light .ucb-mega-menu a:hover {
+  color: #fff;
+}
