Article: byline linking to a Person page

--- a/templates/field/field--field_ucb_article_byline.html.twig
+++ b/templates/field/field--field_ucb_article_byline.html.twig
@@ -1,3 +1,14 @@
 {% for item in items %}
-	<span>{{item.content|render|striptags|trim}}</span>
+    {% set byline_entity = item.content['#entity'] %}
+    {% if byline_entity.field_author_person_page|length > 0 %}
+        {% set author_person_page_entity = byline_entity.field_author_person_page.0.entity %}
+        {% if author_person_page_entity %}
+            {% set url = path('entity.node.canonical', {'node': author_person_page_entity.id()}) %}
+            <a href="{{ url }}">{{ byline_entity.name.value }}</a>
+        {% else %}
+            <span>{{ byline_entity.name.value }}</span>
+        {% endif %}
+    {% else %}
+        <span>{{ byline_entity.name.value }}</span>
+    {% endif %}
 {% endfor %}
