--- a/templates/navigation/menu--extras.html.twig
+++ b/templates/navigation/menu--extras.html.twig
@@ -46,11 +46,24 @@
             </a>
           {% else %}
             {% set title = item.is_unpublished ? {
-            '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="visually-hidden">(Unpublished)</span>'
+            '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ '<span class="visually-hidden">(Unpublished)</span>'
             } : item.title %}
             {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
-              {% set linkURL =  "megaMenuClicked('" ~ title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value ~ "')" %}
-              <a href = "{{item.url}}" class="nav-link ucb-mega-menu-outer-link" data-click = "{{title|lower|trim|replace({' ': ''})}}{{item.content.field_mega_menu_select.0['#block_content'].id.value}}">{{title}} <i class="fa fa-angle-down ucb-mega-menu-icon" aria-hidden="true"></i></a>
+              {% set linkAttr = create_attribute({ 'data-click': title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value}) %}
+              {% set linkTitle = { '#markup': title ~ '<i class="fa fa-angle-down ucb-mega-menu-icon" aria-hidden="true"></i>'} %}
+              {{ link(linkTitle, item.url, linkAttr.addClass(['ucb-mega-menu-outer-link', "nav-link"]))  }}
+              <div class = "ucb-mega-menu container">
+                  {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
+                    <div class="ucb-mega-menu-wrapper block-{{item.title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value}} collapse">
+                      <h2 class="ucb-mega-menu-header"><a href = "{{item.url}}" class = "ucb-mega-menu-heading-link">{{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_heading.value }}</a></h2>
+                      <div class="ucb-mega-menu-column-wrapper">
+                        {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_text_above|view}}
+                        {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_menu_links|view}}
+                      </div>
+                      {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_text_below|view}}
+                    </div>
+                  {% endif %}
+              </div>
             {% else %}
               {{ link(title, item.url, create_attribute({ class: 'nav-link' })) }}
               {% if item.below %}
@@ -61,19 +74,5 @@
         </li>
       {% endfor %}
     </ul>
-      <div class = "ucb-mega-menu container">
-      {% for item in items %}
-        {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
-          <div class="ucb-mega-menu-wrapper block-{{item.title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value}} collapse">
-            <h2 class="ucb-mega-menu-header"><a href = "{{item.url}}" class = "ucb-mega-menu-heading-link">{{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_heading.value }}</a></h2>
-            <div class="ucb-mega-menu-column-wrapper">
-              {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_text_above|view}}
-              {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_menu_links|view}}
-            </div>
-            {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_text_below|view}}
-          </div>
-        {% endif %}
-      {% endfor %}
-      </div>
   {% endif %}
 {% endmacro %}
