--- a/templates/navigation/menu--extras.html.twig
+++ b/templates/navigation/menu--extras.html.twig
@@ -29,7 +29,7 @@
 {{ menus.menu_links(items, attributes, 0) }}
 {% macro menu_links(items, attributes, menu_level) %}
   {% if items %}
-    <ul id = "ucb-main-menu-mega-menu" {{attributes.addClass('ucb-menu nav ucb-main-menu-mega-menu')}}>
+    <ul {{attributes.addClass('ucb-menu nav ucb-main-menu-mega-menu')}}>
       {% for item in items %}
         {% set classes = [
         'menu-item',
@@ -56,7 +56,7 @@
               {{ link(linkTitle, item.url, linkAttr.addClass(['ucb-mega-menu-outer-link', "nav-link"]))  }}
               <div class = "ucb-mega-menu container">
                   {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
-                    <div id = "{{linkID}}" class="ucb-mega-menu-wrapper collapse" data-bs-parent = "#ucb-main-menu-mega-menu">
+                    <div id = "{{linkID}}" class="ucb-mega-menu-wrapper collapse" data-bs-parent = ".ucb-main-menu-mega-menu">
                       <h2 class="ucb-mega-menu-header"><a href = "{{item.url}}" class = "ucb-mega-menu-heading-link">{{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_heading.value }}</a></h2>
                       <div class="ucb-mega-menu-column-wrapper">
                         {{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_text_above|view}}
