--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -29,7 +29,10 @@
 				{% if (item.entity.field_newsletter_article_select.entity and
 					item.entity.field_newsletter_article_select.entity.isPublished()) or
 					(item.entity.field_newsletter_content_title and
-					item.entity.field_newsletter_content_title.value|render) %}
+					item.entity.field_newsletter_content_title.value|render)
+          or
+          item.entity.field_newsletter_content_text.value|render
+          %}
 					{# Code to render selected article content (thumbnail) #}
 					<!--Feature Article-->
 					<table role="presentation" style="padding-bottom: 20px;">
@@ -67,7 +70,7 @@
 						</td>
 					</tr>
 						{# Code to render user made content (title) #}
-					{% elseif item.entity.field_newsletter_content_title.value|render %}
+					{% elseif item.entity.field_newsletter_content_title.value|render or item.entity.field_newsletter_content_text.value|render %}
 						{% if item.entity.field_newsletter_content_url.0.url %}
 							{% set actual_url = item.entity.field_newsletter_content_url.0.url.toString() %}
 							{% set is_absolute = (actual_url starts with 'http://' or actual_url starts with 'https://') %}
@@ -140,7 +143,9 @@
 					{% if (item.entity.field_newsletter_article_select.entity and
 						item.entity.field_newsletter_article_select.entity.isPublished()) or
 						(item.entity.field_newsletter_content_title and
-						item.entity.field_newsletter_content_title.value|render) %}
+						item.entity.field_newsletter_content_title.value|render)
+            or
+            item.entity.field_newsletter_content_text.value|render %}
 	  					<!--Teaser Article-->
 					<center align="left">
 						<table role="presentation" width="100%" style="padding-bottom: 20px;">
@@ -186,7 +191,7 @@
 													</td>
 
 													{# Code to render user made content (title) #}
-												{% elseif item.entity.field_newsletter_content_title.value|render %}
+												{% elseif item.entity.field_newsletter_content_title.value|render or item.entity.field_newsletter_content_text.value|render %}
 													{% if item.entity.field_newsletter_content_url.0.url %}
 														{% set actual_url = item.entity.field_newsletter_content_url.0.url.toString() %}
 														{% set is_absolute = (actual_url starts with 'http://' or actual_url starts with 'https://') %}
