--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -183,12 +183,10 @@
   .ucb-main-nav-container .ucb-menu .ucb-menu .ucb-menu .ucb-menu .ucb-menu li.menu-item a.nav-link {
     padding-left: calc(var(--ucb-menu-indent-start) + var(--ucb-menu-indent-inc) * 4);
   }
-
   .ucb-main-nav-container .ucb-menu .expanded.active > a.nav-link,
   .ucb-main-nav-container .ucb-menu .expanded.active > .ucb-menu {
     border-left: var(--ucb-menu-indent-border-width) solid var(--ucb-gold);
   }
-
   .ucb-main-nav-container .ucb-menu .ucb-menu .expanded.active > a.nav-link,
   .ucb-main-nav-container .ucb-menu .ucb-menu .expanded.active > .ucb-menu {
     border-left: none;
@@ -362,6 +360,15 @@
   .ucb-secondary-menu-region-container .block-system-menu-blocksocial-media-menu,
   .ucb-secondary-menu-region-container #block-boulder-base-secondary-menu {
   width: 100% !important;
+  }
+
+  .ucb-main-nav-container .ucb-menu .expanded.active > a.nav-link,
+  .ucb-main-nav-container .ucb-menu .expanded.active > .ucb-menu {
+    border-left: none;
+  }
+
+  .ucb-main-nav-container .ucb-menu .expanded.active > .ucb-menu {
+    display: none;
   }
 }
 
