--- a/templates/field/field--block-content--field-calendar-code.html.twig
+++ b/templates/field/field--block-content--field-calendar-code.html.twig
@@ -6,9 +6,16 @@
 #}
 
 {% for item in items %}
-       {% if ('text/javascript' in item.content['#context'].value|raw) and ('src="https://calendar.colorado.edu/widget' in item.content['#context'].value|raw) %}
-        <div class="ucb-events-calendar">{{ item.content['#context'].value|raw }}</div>
-    {% else %}
+  {% if ('text/javascript' in item.content['#context'].value) and ('src="https://calendar.colorado.edu/widget' in item.content['#context'].value) %}
+
+    {% set calendarID = 'localist-widget-' ~ random() %}
+    {% set queryParams = item.content['#context'].value|preg_replace('/localist-widget-[0-9]+/', calendarID)|split('?')[1]|split('"')[0] %}
+
+    <div class="ucb-events-calendar">
+      <div id="{{ calendarID }}" class="localist-widget"></div>
+      <script defer type="text/javascript" src="https://calendar.colorado.edu/widget/view?{{ queryParams }}"></script>
+    </div>
+  {% else %}
     <strong>Error: Only calendar.colorado.edu events embed code is allowed.</strong>
-    {% endif %}
+  {% endif %}
 {% endfor %}
