--- a/templates/field/field--block-content--field-calendar-code.html.twig
+++ b/templates/field/field--block-content--field-calendar-code.html.twig
@@ -12,7 +12,7 @@
 
     <div class="ucb-events-calendar">
       <div id="{{ calendarID }}" class="localist-widget"></div>
-      <script defer type="text/javascript" src="https://calendar.colorado.edu/widget/view?{{ queryParams }}"></script>
+      <script type="text/javascript" src="https://calendar.colorado.edu/widget/view?{{ queryParams }}"></script>
     </div>
   {% else %}
     <strong>Error: Only calendar.colorado.edu events embed code is allowed.</strong>
