ID generation replace
Replacing our ID generation for these blocks so that reusable blocks don't run into errors with duplicate reusable blocks on the same page.

--- a/templates/block/block--expandable-content.html.twig
+++ b/templates/block/block--expandable-content.html.twig
@@ -14,7 +14,7 @@
   'ucb-expandable-content'
 ] %}
 
-{% set entity = content['#block_content'] %}{% set id = entity.uuid.value %}
+{% set entity = content['#block_content'] %}{% set id = '-id'|clean_unique_id %}
 {% set layoutSelection = entity.field_expandable_content_type.value %}
 
 {% set accordianContent %}
