--- a/templates/block/block--slider.html.twig
+++ b/templates/block/block--slider.html.twig
@@ -13,17 +13,6 @@
   'ucb-slider-block'
 ] %}
 
-{# set classes for the size of the component #}
-{% if content['#block_content'].field_slider_size.value == '0' %}
-  {% set size = 'size-ultrawide' %}
-{% elseif content['#block_content'].field_slider_size.value == '1' %}
-  {% set size = 'size-widescreen' %}
-{% elseif content['#block_content'].field_slider_size.value == '2' %}
-  {% set size = 'size-threetwo' %}
-{% else %}
-  {% set size = 'size-large' %}
-{% endif %}
-
 {% set id = 'carousel'|clean_unique_id %}
 
 {% extends '@boulder_base/block/styled-block.html.twig' %}
@@ -33,15 +22,11 @@
   <div id="{{ id }}" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000" data-bs-pause="hover">
     <div class="carousel-indicators">
       {% for i in 1..content['#block_content'].field_slider_slide.value|length %}
-        <button{{ create_attribute({
-          type: 'button',
-          'data-bs-target': '#' ~ id,
-          'data-bs-slide-to': i - 1,
-          'aria-label': 'Slide ' ~ i
-        }).addClass(loop.first ? 'active') }}></button>
+        <button{{create_attribute({type:'button','data-bs-target':'#'~id,'data-bs-slide-to':i-1,'aria-label':'Slide'~i}).addClass(loop.first?'active')}}></button>
       {% endfor %}
     </div>
-    <div class="carousel-inner">
+    <div
+      class="carousel-inner">
       {# Don't render these fields #}
       {{ content|without(
         'field_slider_size',
