--- a/templates/field/field--field-ucb-person-primary-link.html.twig
+++ b/templates/field/field--field-ucb-person-primary-link.html.twig
@@ -1,6 +1,6 @@
 {#
 /**
- * @file Contains the template to display the Links field of a Person node.
+ * @file Contains the template to display the Primary Link field of a Person node.
  */
 #}
 
