CuBoulder/tiamat-theme#1256 Adds title fallback if empty

--- a/templates/navigation/menu--social-media-menu.html.twig
+++ b/templates/navigation/menu--social-media-menu.html.twig
@@ -32,6 +32,7 @@
     <li>
       {% set title = useTitle ? (item.content ? item.content['#title']|render : item.title|render)|trim %}
       {% set uri = (item.content ? item.content['#url']|render : item.url|render)|trim %}
+      {% set title = useTitle ? (title ? title : uri) %}
       {% set hostname = '' %}
       {% if uri matches '/^(http(s)?:)?\\/\\//i' %}
         {% set hostname = uri|split('/').2 %}
