--- a/templates/layout/page--node--layout.html.twig
+++ b/templates/layout/page--node--layout.html.twig
@@ -37,9 +37,8 @@
  * - page.above_content: Contained content above the main content.
  * - page.content: The main content of the current page.
  * - page.below_content: Containted content below the main content
- * - page.wide_post: Full width content below the below content..
- * - page.sidebar_first: Items for the first sidebar.
- * - page.sidebar_second: Items for the second sidebar.
+ * - page.wide_post: Full width content below the below content.
+ * - page.sidebar: Items for the sidebar.
  * - page.footer: Items for the footer region.
  * - page.breadcrumb: Items for the breadcrumb region.
  *
