--- a/css/ucb-pager.css
+++ b/css/ucb-pager.css
@@ -18,7 +18,6 @@
   display: inline-block;
   padding: 4px 8px;
   border: 1px solid rgba(128, 128, 128, 0.333);
-  background-color: #fff;
 }
 
 .ucb-pager li.ucb-pager-current {
@@ -26,6 +25,12 @@
   color: #fff;
   border: 1px solid #0277bd;
   background-color: #0277bd;
+}
+
+.ucb-pager li a:hover,
+.ucb-pager li a:focus {
+  color: #01579b;
+  background-color: #eee;
 }
 
 .ucb-pager li:first-child.ucb-pager-current,
