css tweaks, adding in default value that matches the latest release and replacing the screenshot

--- a/css/ucb-user-page.css
+++ b/css/ucb-user-page.css
@@ -10,3 +10,9 @@
 .ucb-user-documentation {
   padding-bottom: 10px;
 }
+
+.ucb-webexpress-version {
+  text-align: right;
+  font-size: smaller;
+  font-style: italic;
+}
