--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -66,6 +66,8 @@
           <div class="ucb-user-documentation">
             <h2>Documentation</h2>
             <a href="https://www.colorado.edu/webcentral/">User Documentation</a>
+          </div>
+          <div class="ucb-webexpress-version">
             <p>Web Express version: {{ web_express_version ?? 'Unknown' }}</p>
           </div>
         </div>
