Hero Unit color fix

--- a/css/ucb-print.css
+++ b/css/ucb-print.css
@@ -39,6 +39,9 @@ body {
   color: #000 !important;
 
 }
+.ucb-video-reveal-controls,
+.text-white,
+.ucb-hero-unit-links,
 .ucb-bootstrap-layout-section {
   color: #000 !important;
 
