--- a/templates/block/block--faculty-publications.html.twig
+++ b/templates/block/block--faculty-publications.html.twig
@@ -12,9 +12,17 @@
   view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
   'ucb-faculty-publications'
 ] %}
-
+{% set blockContent = content['#block_content'] %}
+{% set fieldFrom = blockContent.field_faculty_publications_from.value %}
+{% set fieldTo = blockContent.field_faculty_publications_to.value %}
+{% set fieldDpt = blockContent.field_faculty_publications_dpt.value %}
 {% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
   {{ attach_library('boulder_base/ucb-faculty-publications') }}
-  <faculty-publications></faculty-publications>
+  <faculty-publications{{ create_attribute({
+    from: fieldFrom ? fieldFrom|date('Y-m-d') : null,
+    to: fieldTo ? fieldTo|date('Y-m-d') : null,
+    department: fieldDpt ? fieldDpt|trim : null,
+    email: blockContent.field_faculty_publications_email.value
+  }) }}></faculty-publications>
 {% endblock %}
