CuBoulder/tiamat-theme#1146 Adds auto-detect if placed on person page setting

--- a/templates/block/block--faculty-publications.html.twig
+++ b/templates/block/block--faculty-publications.html.twig
@@ -17,6 +17,7 @@
 {% set fieldTo = blockContent.field_faculty_publications_to.value %}
 {% set fieldDpt = blockContent.field_faculty_publications_dpt.value %}
 {% set fieldP = blockContent.field_faculty_publications_p %}
+{% set email = faculty_publications_auto_email ? faculty_publications_auto_email : blockContent.field_faculty_publications_email.value %}
 {% set people = fieldP ? fieldP|map(item => item.entity)|merge(faculty_publications_jt_people ?? []) : faculty_publications_jt_people %}
 {% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
@@ -25,7 +26,7 @@
     from: fieldFrom ? fieldFrom|date('Y-m-d') : null,
     to: fieldTo ? fieldTo|date('Y-m-d') : null,
     department: fieldDpt ? fieldDpt|trim : null,
-    email: blockContent.field_faculty_publications_email.value,
+    email: email,
     count: blockContent.field_faculty_publications_count.value,
     sort: blockContent.field_faculty_publications_sort.value,
     emails: people ? people|map(person => person.field_ucb_person_email.value)|json_encode : null
