CuBoulder/tiamat-theme#1295 Corrects Social Media Icons block to not be inline-flex display (2)

--- a/templates/block/block--social-media-icons.html.twig
+++ b/templates/block/block--social-media-icons.html.twig
@@ -43,7 +43,7 @@
     class: [
       'social-media-icons-block',
       layoutSelection ~ '-orientation',
-      imgSize
+      imageSize
     ]
   }) }}>
     {{ content.field_social_media_links }}
